fix items align in drop zones

--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -175,7 +175,7 @@
                         transition: 0.15s all ease-in-out
 
                     .drop-zone
-                        display: flex
+                        @include mixin.flex-center
                         gap: 1rem
                         flex-direction: column
                         border-radius: 5px
